# address_book_gtk

./: Cargo.toml  Dockerfile  README.md  oldDockerfile.txt
src/: gtk_custom.rs  lib.rs  main.rs
src/fields/: client.rs
src/fields/client/: address.rs  email.rs  name.rs  phone.rs
src/glade/: address_book.glade  address_book.glade~
src/gtk_custom/: custom_gobjects.rs  do_once.rs  last_edited.rs
src/gtk_custom/custom_gobjects/: button_behavior.rs  button_cancel.rs  button_delete.rs  button_edit.rs  button_new.rs  button_save.rs  entries.rs  entry.rs  entry_name.rs  listbox.rs  liststore.rs  row.rs  rowdata.rs
src/model/: client.rs
src/model/client/: address.rs  email.rs  name.rs  phone.rs
tests/: tests.rs
