[package]
name = "address_book_gtk"
version = "0.1.0"
authors = ["On0n0k1 <stiltztinkerstein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gtk]
version = "0.9.2"
default-features = false
features = ["v3_16"]

[dependencies.gio]
version = "0.9.1"
default-features = false
features = ["v2_44"]

[dependencies]
glib-sys = "^0"
gobject-sys = "^0"
glib = "^0"